--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -2764,26 +2764,26 @@
     float: left !important;
   }
 }
-._10l1rcs4 {
+.landing-page__explore-wrapper {
   width: 100% !important;
   margin: 0 auto 24px !important;
   padding-left: 24px !important;
   padding-right: 24px !important;
 }
 @media (min-width: 1440px) {
-  ._10l1rcs4 {
+  .landing-page__explore-wrapper {
     max-width: 1440px !important;
   }
 }
 @media (min-width: 744px) {
-  ._10l1rcs4 {
+  .landing-page__explore-wrapper {
     padding-left: 40px !important;
     padding-right: 40px !important;
     margin-bottom: 32px !important;
   }
 }
 @media (min-width: 1128px) {
-  ._10l1rcs4 {
+  .landing-page__explore-wrapper {
     padding-left: 80px !important;
     padding-right: 80px !important;
     margin-bottom: 48px !important;
