rename covid safety

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -13620,7 +13620,7 @@ fieldset[disabled] .btn {
   }
 }
 @media (min-width:744px) {
-  ._1udzt2s,
+  .footer__copyright-container-mb,
   .hide-md {
     display: none!important
   }
@@ -14746,7 +14746,7 @@ fieldset[disabled] .btn {
   padding-bottom: 24px!important;
   padding-top: 0!important
 }
-._s1tlw0m {
+.landing-page__faq-question {
   margin: 0!important;
   overflow-wrap: break-word!important;
   font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,'Helvetica Neue',sans-serif!important;
