--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -2377,7 +2377,7 @@
   height: 82px !important;
   padding: 24px !important;
 }
-._dernx5 {
+.landing-page__faq-answer {
   -webkit-appearance: none !important;
   -moz-appearance: none !important;
   appearance: none !important;
@@ -2393,57 +2393,57 @@
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
 }
-._dernx5:focus-visible {
+.landing-page__faq-answer:focus-visible {
   outline: 0 !important;
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
   transition: box-shadow 0.2s !important;
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.5), 0 0 0 5px rgba(255, 255, 255, 0.7) !important;
 }
-._dernx5:focus-visible::-moz-focus-inner {
+.landing-page__faq-answer:focus-visible::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._dernx5:focus-visible:focus::-moz-focus-inner {
+.landing-page__faq-answer:focus-visible:focus::-moz-focus-inner {
   border: none !important;
 }
-._dernx5:focus-visible:-moz-focusring {
+.landing-page__faq-answer:focus-visible:-moz-focusring {
   outline: 0 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._dernx5:focus-visible {
+  .landing-page__faq-answer:focus-visible {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._dernx5:focus[data-focus-visible-added] {
+.landing-page__faq-answer:focus[data-focus-visible-added] {
   outline: 0 !important;
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
   transition: box-shadow 0.2s !important;
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.5), 0 0 0 5px rgba(255, 255, 255, 0.7) !important;
 }
-._dernx5:focus[data-focus-visible-added]::-moz-focus-inner {
+.landing-page__faq-answer:focus[data-focus-visible-added]::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._dernx5:focus[data-focus-visible-added]:focus::-moz-focus-inner {
+.landing-page__faq-answer:focus[data-focus-visible-added]:focus::-moz-focus-inner {
   border: none !important;
 }
-._dernx5:focus[data-focus-visible-added]:-moz-focusring {
+.landing-page__faq-answer:focus[data-focus-visible-added]:-moz-focusring {
   outline: 0 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._dernx5:focus[data-focus-visible-added] {
+  .landing-page__faq-answer:focus[data-focus-visible-added] {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._dernx5:disabled {
+.landing-page__faq-answer:disabled {
   opacity: 0.5 !important;
   cursor: not-allowed !important;
   color: graytext !important;
@@ -2807,15 +2807,15 @@
     margin-bottom: 48px !important;
   }
 }
-._17tf4bm {
+.landing-page__explore {
   text-align: left !important;
 }
 @media (min-width: 744px) {
-  ._17tf4bm {
+  .landing-page__explore {
     text-align: center !important;
   }
 }
-._1vy5zdl {
+.landing-page__image-full {
   margin: auto !important;
   background-size: cover !important;
   background-position: 50% 50% !important;
@@ -2827,7 +2827,7 @@
   display: -webkit-flex !important;
   display: flex !important;
 }
-._1dd0qxr {
+.landing-page__full-wrapper {
   -webkit-box-pack: center !important;
   -ms-flex-pack: center !important;
   -webkit-box-align: center !important;
@@ -2847,7 +2847,7 @@
   -webkit-justify-content: center !important;
   justify-content: center !important;
 }
-._1jfjn9y {
+.landing-page__full-overlay {
   -webkit-box-pack: inherit !important;
   -ms-flex-pack: inherit !important;
   -webkit-box-align: inherit !important;
@@ -2872,26 +2872,26 @@
   padding-left: 24px !important;
 }
 @media (min-width: 744px) {
-  ._1jfjn9y {
+  .landing-page__full-overlay {
     padding-left: 40px !important;
     padding-right: 40px !important;
   }
 }
 @media (min-width: 1128px) {
-  ._1jfjn9y {
+  .landing-page__full-overlay {
     max-width: 1440px !important;
     padding-left: 80px !important;
     padding-right: 80px !important;
   }
 }
-._1kc7i8u {
+.landing-page__full-heading {
   z-index: 1 !important;
   max-width: 699px !important;
   width: 100% !important;
   margin-top: 24px !important;
   margin-bottom: 24px !important;
 }
-._cl2f7a4 {
+.landing-page__full-heading-h1 {
   margin: 0 !important;
   word-wrap: break-word !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
@@ -2902,90 +2902,90 @@
   color: inherit !important;
 }
 @media (min-width: 744px) {
-  ._cl2f7a4 {
+  .landing-page__full-heading-h1 {
     font-size: 46px !important;
     line-height: 1.1304347826086956em !important;
   }
 }
-._1ody03d {
+.landing-page__spacer {
   width: 100% !important;
   height: 48px !important;
 }
 @media (min-width: 744px) {
-  ._1ody03d {
+  .landing-page__spacer {
     height: 72px !important;
   }
 }
 @media (min-width: 1128px) {
-  ._1ody03d {
+  .landing-page__spacer {
     height: 96px !important;
   }
 }
 @media (min-width: 744px) {
-  ._7euvbh {
+  .landing-page__question-container {
     padding-right: 8px !important;
   }
 }
 @media (min-width: 1128px) {
-  ._7euvbh {
+  .landing-page__question-container {
     padding-right: 16px !important;
   }
 }
 @media (min-width: 744px) {
-  ._3xit3h {
+  .landing-page__question-wrap-content {
     padding-left: 8px !important;
   }
 }
 @media (min-width: 1128px) {
-  ._3xit3h {
+  .landing-page__question-wrap-content {
     padding-left: 16px !important;
   }
 }
-._19dmoalb {
+.landing-page__question-wrapper {
   padding-left: 8px !important;
   padding-right: 8px !important;
   min-height: 1px !important;
   position: relative !important;
 }
 @media (min-width: 744px) {
-  ._19dmoalb {
+  .landing-page__question-wrapper {
     width: 50% !important;
     float: left !important;
   }
 }
 @media (min-width: 1128px) {
-  ._19dmoalb {
+  .landing-page__question-wrapper {
     width: 50% !important;
     float: left !important;
   }
 }
-._ir2o62c {
+.landing-page__question-content-wrap {
   border-bottom: 0 !important;
   padding-top: 24px !important;
   padding-bottom: 24px !important;
 }
 @media (min-width: 744px) {
-  ._ir2o62c {
+  .landing-page__question-content-wrap {
     padding-top: 32px !important;
     padding-bottom: 32px !important;
   }
 }
-._1e9va8u {
+.landing-page__learn-more {
   color: #222 !important;
   margin-top: 12px !important;
   font-size: 16px !important;
   line-height: 24px !important;
 }
-._1e9va8u:nth-child(n) p:first-of-type {
+.landing-page__learn-more:nth-child(n) p:first-of-type {
   -webkit-margin-before: 0 !important;
   margin-block-start: 0 !important;
 }
-._1e9va8u:nth-child(n) p:last-of-type {
+.landing-page__learn-more:nth-child(n) p:last-of-type {
   -webkit-margin-after: 0 !important;
   margin-block-end: 0 !important;
 }
 @media (min-width: 1128px) {
-  ._1e9va8u {
+  .landing-page__learn-more {
     font-size: 18px !important;
     line-height: 28px !important;
   }
@@ -3014,7 +3014,7 @@
     margin-top: 48px !important;
   }
 }
-._d4ojg9 {
+.landing-page__question-text {
   font-size: 16px !important;
   line-height: 24px !important;
   font-weight: 600 !important;
@@ -3022,7 +3022,7 @@
   text-decoration: underline !important;
 }
 @media (min-width: 1128px) {
-  ._d4ojg9 {
+  .landing-page__question-text {
     font-size: 18px !important;
     line-height: 28px !important;
   }
@@ -15643,7 +15643,7 @@ h3:first-child {
   padding-top: 32px !important;
   padding-bottom: 24px !important;
 }
-._s1tlw0m {
+.landing-page__faq-question {
   margin: 0 !important;
   word-wrap: break-word !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
@@ -42049,7 +42049,7 @@ tr.show-desktop {
   padding-left: 1px !important;
 }
 @media (min-width: 744px) {
-  ._1udzt2s {
+  .footer__copyright-container-mb {
     display: none !important;
   }
 }
@@ -47735,7 +47735,7 @@ tr.show-desktop {
   color: #717171 !important;
   margin-top: -4px !important;
 }
-._9dd4bh {
+.landing-page__question-content {
   border-bottom: 1px solid #ddd !important;
 }
 ._1cdzk1n {
