--- a/src/css/global.css
+++ b/src/css/global.css
@@ -46,7 +46,7 @@
   }
 }
 @media (min-width:744px) {
-  ._1udzt2s,
+  .footer__copyright-container-mb,
   .hide-md {
     display: none!important
   }
@@ -1172,7 +1172,7 @@
   padding-bottom: 24px!important;
   padding-top: 0!important
 }
-._s1tlw0m {
+.landing-page__faq-question {
   margin: 0!important;
   overflow-wrap: break-word!important;
   font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,'Helvetica Neue',sans-serif!important;
