--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -14752,7 +14752,7 @@ fieldset[disabled] .btn {
   padding-bottom: 24px!important;
   padding-top: 0!important
 }
-._s1tlw0m {
+.landing-page__faq-question {
   margin: 0!important;
   overflow-wrap: break-word!important;
   font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,'Helvetica Neue',sans-serif!important;
